Implement integration tests (#61)
* Prepare integration test code

* Add travis script; Edit readme

* Multisig contract it

* Fix multisig/contracts api; add it tests for the api

* Test EscrowEscrows handler

* Move testing tools to bnsapitest

* Fix escrow escrows test and handler

* Add ExtractOffsetFromParam func

* Add todo

* Refactor bns client and fix tests

* Delete hard coded testnet url

* Import dec and enc functions from bnscli

* Add new tests

* Implement ID tests

* Run go mod tidy

* Fix client

* Fix offset logic and queries

* Update docs

* Fix account owner test


* Fix make test command

* Fix account/owner

* Fix escrow and msgfee

* Generate docs
